--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2263,7 +2263,9 @@ Ainol:
       model: '$1'
     - regex: 'Aurora-II'
       model: 'Novo 7 Aurora II'
-    - regex: 'Novo7 Flame(?:[);/ ]|$)'
+    - regex: 'Novo7Fire'
+      model: 'Novo 7 Fire'
+    - regex: 'Novo7 ?Flame(?:[);/ ]|$)'
       model: 'Novo 7 Flame'
     - regex: 'NOVO7(?:[);/ ]|$)'
       model: 'Novo 7'
@@ -7970,7 +7972,7 @@ IconBIT:
     - regex: 'TOUCAN Stick 4K'
       model: 'Toucan Stick 4K'
       device: 'tv'
-    - regex: '(?:iconBIT )?(Movie Smart 4K|Movie IPTV Quad|Movie Ultra HD 4K|XDS[789]4K|Omnicast UHD)'
+    - regex: '(?:iconBIT )?(Movie Smart 4K|Movie IPTV Quad|Movie Ultra HD 4K|XDS[789]4K|Omnicast UHD|Stick)'
       model: '$1'
       device: 'tv'
 
@@ -12663,7 +12665,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|42|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[036]|8[059]|9[345])|220[0125]|18(0[13579]|11|3[13]|2[157]|[45]1|45)|32(?:01|42|[346]1)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|15|9[15]|71)|3350)|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
+  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|42|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[036]|8[059]|9[345])|220[0125]|18(0[13579]|11|3[13]|2[157]|[45]1|53|45)|32(?:01|42|[346]1)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|15|9[15]|71)|3350)|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861(?:[);/ ]|$)'
@@ -12676,7 +12678,7 @@ Realme:
       model: '3'
     - regex: 'RMX1827'
       model: '3i'
-    - regex: 'RMX1851'
+    - regex: 'RMX185[13]'
       model: '3 Pro'
     - regex: 'RMX190[13]|Realme X(?:[);/ ]|$)'
       model: 'X'
